tests/invalid/generated_binop_pow_bool_none/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bool = True
    y: None = None
    z = x ** y
